hphp/test/slow/nullsafe/nullsafe-call-2.php.expectf
object(D) (0) {
}

Catchable fatal error: Value returned from function test() must be of type D, null given in %s on line 9
